--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </div>
 
             <footer class="footer footer-fixed footer-promotional btn-set layout-single-column">
-                <a class="btn btn-link" title="">国馆首页</a>
+                <!--<a class="btn btn-link" title="">国馆首页</a>
                 <a class="btn btn-link" title="" href="">每日一文</a>
-                <a class="btn btn-link" title="" href="">国馆电台</a>
+                <a class="btn btn-link" title="" href="">国馆电台</a>-->
             </footer>
         </div>
 
