--- a/index.html
+++ b/index.html
@@ -23,37 +23,54 @@
         </div>
         <div class="site-nav-scrollable-container" id="site-nav-scrollable-container">
             <ul class="site-nav-list">
-                <li class="site-nav-list-item navigable-list-item">
+                <li class="site-nav-list-item navigable-list-item" style="margin-top:0.5rem">
                     <a class="site-nav-list-item-btn" title="Go home" href="/" tabindex="-1">
-                        <span class="icons icon-home"></span>国馆首页
+                        <span class="icons my-icon-home"></span>国馆首页
                     </a>
                 </li>
-            </ul>
-            <div class="site-nav-title">
-                国馆应用
-            </div>
-            <ul class="site-nav-list">
+                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                        <span class="icons"></span>国馆应用
+                </li>
                 <li class="site-nav-list-item navigable-list-item">
                     <a class="site-nav-list-item-btn" title="Go home" href="/" tabindex="-1">
-                        <span class="icons icon-book"></span>新文化杂志
+                        <span class="icons "></span>新文化杂志
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item">
                     <a class="site-nav-list-item-btn" title="Collections" href="/collections" tabindex="-1">
-                        <span class="icons icon-bell-alt"></span>下一小时
+                        <span class="icons "></span>下一小时
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item">
                     <a class="site-nav-list-item-btn" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
-                    <span class="icons icon-play-circle"></span>国馆电台
+                        <span class="icons "></span>国馆电台
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item">
                     <a class="site-nav-list-item-btn" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
-                        <span class="icons icon-glass"></span>文化测试
+                        <span class="icons "></span>文化测试
                     </a>
                 </li>
             </ul>
+
+            <ul class="site-nav-list site-nav-list-bottom">
+                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                    <a class="" title="Collections" href="/collections" tabindex="-1">
+                        <span class="icons "></span>品牌故事
+                    </a>
+                </li>
+                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                    <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
+                        <span class="icons "></span>关于国馆
+                    </a>
+                </li>
+                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                    <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
+                        <span class="icons "></span>联系国馆
+                    </a>
+                </li>
+            </ul>
+
         </div>
     </nav>
 
