字体颜色微调

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             </ul>
 
             <ul class="site-nav-list site-nav-list-bottom">
-                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
                     <a class="" title="Collections" href="/collections" tabindex="-1">
                         <span class="icons "></span>品牌故事
                     </a>
                 </li>
-                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
                     <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
                         <span class="icons "></span>关于国馆
                     </a>
                 </li>
-                <li class="site-nav-list-item navigable-list-item site-nav-title">
+                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
                     <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="/m/account/authenticate-twitter" tabindex="-1">
                         <span class="icons "></span>联系国馆
                     </a>
