--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
     <title>国馆-中国道</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -15,8 +15,8 @@
 <body>
     <nav class="site-nav" tabindex="-1">
         <div class="site-nav-logo icons-logo-circle distraction-free-component" id="open-nav-button" data-action="open-nav">
+            <span class="icons-logo-content">国</span>
             <span class="icons ">
-                
                 <span class="screen-reader-text">guoguan site navigation
                 </span>
             </span>
@@ -26,7 +26,7 @@
             <ul class="site-nav-list">
                 <li class="site-nav-list-item navigable-list-item" style="margin-top:0.5rem">
                     <a class="site-nav-list-item-btn" title="Go home" href="#" tabindex="-1">
-                        <span class="icons my-icon-home"></span>国馆首页
+                        <span class="icons my-icon-home"></span>中国道
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item site-nav-title">
@@ -55,18 +55,18 @@
             </ul>
 
             <ul class="site-nav-list site-nav-list-bottom">
-                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
-                    <a class="" title="Collections" href="#" tabindex="-1">
+                <li class="site-nav-list-item navigable-list-item site-nav-bottom-title color-grey">
+                    <a class="site-nav-list-item-btn" title="Collections" href="#" tabindex="-1">
                         <span class="icons "></span>品牌故事
                     </a>
                 </li>
-                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
-                    <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="#" tabindex="-1">
+                <li class="site-nav-list-item navigable-list-item site-nav-bottom-title color-grey">
+                    <a class="site-nav-list-item-btn" title="Sign in with Twitter" href="#" tabindex="-1">
                         <span class="icons "></span>关于国馆
                     </a>
                 </li>
-                <li class="site-nav-list-item navigable-list-item site-nav-title color-grey">
-                    <a class="" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="#" tabindex="-1">
+                <li class="site-nav-list-item navigable-list-item site-nav-bottom-title color-grey">
+                    <a class="site-nav-list-item-btn" title="Sign in with Twitter" href="#" tabindex="-1">
                         <span class="icons "></span>联系国馆
                     </a>
                 </li>
@@ -80,8 +80,8 @@
             <div class="site-focus">
                 <div class="site-content">
                         <div class="site-middle-button">
-                            <p class="button"><a class="btn btn-default btn-lg" role="button">了解中国道</a></p>
-                            <p class="button" style="margin-left: 10px"><a class="btn btn-default btn-lg" role="button">进入官网</a></p>
+                            <!--<p class="button"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>-->
+                            <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>
                         </div>
                 </div>
             </div>
@@ -92,9 +92,12 @@
                 <a class="btn btn-link" title="" href="">国馆电台</a>-->
             </footer>
         </div>
+    </div>
 
+    <!--<div class="bsync-custom icon-medium-blue"><a title="一键分享到各大微博和社交网络" class="bshare-bsync" onclick="javascript:bSync.share(event)"></a><span class="BSHARE_COUNT bshare-share-count">0</span></div>-->
 
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
