--- a/index.html
+++ b/index.html
@@ -11,25 +11,15 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
-</head>
-<style>
-    #message{
-    width:300px;
-    height:200px;
-    overflow:hidden;
-    display:none;
-    border:1px solid #000;
-    position:absolute;
-    bottom:0;
-    right:0;
-    background:#C4D79B;
-        }
-</style>
-<body>
-<div id="message">
-    <!--消息框的内容-->
-</div>
 
+
+</head>
+
+<body>
+    <div class="share-cover">
+        <div class="share-guide" id="weixin-guide"></div>
+        <div class="share-guide" id="mobile-guide"></div>
+    </div>
     <nav class="site-nav" tabindex="-1">
         <div class="site-nav-logo icons-logo-circle distraction-free-component" id="open-nav-button" data-action="open-nav">
             <span class="icons-logo-content">国</span>
@@ -60,7 +50,7 @@
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item">
-                    <a class="site-nav-list-item-btn" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="#" tabindex="-1">
+                    <a class="site-nav-list-item-btn" title="Sign in with Twitter" data-action="sign-in-with-twitter" href="http://www.guoguan.com/fm/" tabindex="-1">
                         <span class="icons "></span>国馆电台
                     </a>
                 </li>
@@ -98,10 +88,23 @@
                 <div class="site-content">
                         <div class="site-middle-button">
                             <!--<p class="button"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>-->
-                            <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>
+                          <!--  <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>-->
+
+                            <!-- Baidu Button BEGIN -->
+                            <div class="bdsharebuttonbox">
+                                <a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">分享赢中国道<i class="icon-chevron-right ml10"></i></a></a>
+                            </div>
+
+                            <!-- Baidu Button END -->
                         </div>
+
+
+
                 </div>
             </div>
+
+
+
 
             <footer class="footer footer-fixed footer-promotional btn-set layout-single-column">
                 <!--<a class="btn btn-link" title="">国馆首页</a>
@@ -111,9 +114,8 @@
         </div>
     </div>
 
-    <!--<div class="bsync-custom icon-medium-blue"><a title="一键分享到各大微博和社交网络" class="bshare-bsync" onclick="javascript:bSync.share(event)"></a><span class="BSHARE_COUNT bshare-share-count">0</span></div>-->
-
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script type="text/javascript" src="js/option.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -124,19 +126,6 @@
     <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
 
     <![endif]-->
-
-
-    <script>
-        $(document).ready(function(){
-            if(window.name==""){//第一次打开网页
-                var mes=$("#message");//获取id="message"的div对象
-                mes.slideDown(1000).fadeOut(10000);
-                window.name="mytest";//随便给name赋一个值，这个值只要窗口不关闭，就一直不变
-            }
-        });
-    </script>
-
-
 
 <script>
     var isHiden = true; /*控制切换菜单*/
@@ -154,6 +143,7 @@
         document.body.addEventListener('touchmove', function (event) {
             event.preventDefault();
         }, false);
+
     });
     function openLeftNav() {
         console.log("1111");
