--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html >
 <head>
-    <title>国馆-中国道</title>
+    <title>5月4日 国馆·中国道产品发布会 - 国馆</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
+    <meta name="description" content="中国道是国馆首款收藏级文化白酒，大师之作，是送礼的绝佳选择，是客厅的装B利器，是不愿轻易风险的收藏级好酒。中国道，这种酒，你只会用来招待最知心的朋友。">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -11,6 +13,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+    <link rel="stylesheet" href="css/animations.css">
 
 
 </head>
