--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 
 </head>
 
-<body>
+<body onclick="closeGuideImg()">
     <div class="share-cover">
         <div class="share-guide" id="weixin-guide"></div>
         <div class="share-guide" id="mobile-guide"></div>
     </div>
     <nav class="site-nav" tabindex="-1">
+        <div id="guide-handle-img" class="slideExpandUp">
+            <i class='icon-hand-up'></i>
+        </div>
         <div class="site-nav-logo icons-logo-circle distraction-free-component" id="open-nav-button" data-action="open-nav">
-            <span class="icons-logo-content">国</span>
+            <!--<span class="icons-logo-content">国</span>-->
             <span class="icons ">
                 <span class="screen-reader-text">guoguan site navigation
                 </span>
@@ -105,10 +108,6 @@
 
                 </div>
             </div>
-
-
-
-
             <footer class="footer footer-fixed footer-promotional btn-set layout-single-column">
                 <!--<a class="btn btn-link" title="">国馆首页</a>
                 <a class="btn btn-link" title="" href="">每日一文</a>
@@ -129,7 +128,6 @@
     <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
 
     <![endif]-->
-
 <script>
     var isHiden = true; /*控制切换菜单*/
 
@@ -164,6 +162,49 @@
         isHiden = !isHiden;
     }
 
+</script>
+<script type="text/javascript">
+    function setCookie(name,value,days){
+        var exp=new Date();
+        exp.setTime(exp.getTime() + days*24*60*60*1000);
+        var arr=document.cookie.match(new RegExp("(^| )"+name+"=([^;]*)(;|$)"));
+        document.cookie=name+"="+escape(value)+";expires="+exp.toGMTString();
+    }
+    function getCookie(name){
+        var arr=document.cookie.match(new RegExp("(^| )"+name+"=([^;]*)(;|$)"));
+        if(arr!=null){
+            return unescape(arr[2]);
+            return null;
+        }
+    }
+    function delCookie(name){
+        var exp=new Date();
+        exp.setTime(exp.getTime()-1);
+        var cval=getCookie(name);
+
+        if(cval!=null){
+
+            document.cookie=name+"="+cval+";expires="+exp.toGMTString();
+        }
+    }
+    function out(){
+
+        if(getCookie("out")!="yes"){
+
+            setCookie("out","yes",1);document.onLoad = sss();//sss()调用浮动层
+        }
+    }
+    out();
+
+    function sss() {
+        var guideHandleImg = document.getElementById("guide-handle-img");
+        guideHandleImg.style.display = "block";
+    }
+
+    function closeGuideImg(){
+        var guideHandleImg = document.getElementById("guide-handle-img");
+        guideHandleImg.style.display = "none";
+    }
 </script>
 </body>
 </html>
