--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                             <!-- Baidu Button BEGIN -->
                             <div class="bdsharebuttonbox">
-                                <a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">分享赢中国道<i class="icon-chevron-right ml10"></i></a></a>
+                                <a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博"><i class="icon-share mr5"></i>分享，赢中国道<i class="icon-chevron-right ml10"></i></a></a>
                             </div>
 
                             <!-- Baidu Button END -->
