--- a/index.html
+++ b/index.html
@@ -88,11 +88,18 @@
         </div>
     </nav>
 
+    <div class="index-login-register">
+        <ul>
+            <li><a>登陆</a></li>
+            <li><a>注册</a></li>
+        </ul>
+    </div>
+
     <div class="site-container" id="site-container">
         <div class="surface" style="visibility: visible">
             <div class="site-focus">
                 <div class="site-content">
-                        <div class="site-middle-button">
+                        <div class="site-middle-button" style="text-align: center">
                             <!--<p class="button"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>-->
                           <!--  <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>-->
 
@@ -100,8 +107,8 @@
                             <div class="bdsharebuttonbox">
                                 <!--<a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">
                                     <i class="icon-share mr5"></i>分享，赢中国道<i class="icon-chevron-right ml10"></i></a>-->
-                                <a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">
-                                   预约，购买通道<i class="icon-chevron-right ml10"></i></a>
+                                <p class="button"><a class="btn btn-default btn-lg" role="button">立即预约<i class="icon-chevron-right ml10"></i></a></p>
+                                  <p class="button" style="margin-bottom: 50px; margin-left: 60px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">产品详情</a></p>
                             </div>
 
                             <!-- Baidu Button END -->
