--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <!--<a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">
                                     <i class="icon-share mr5"></i>分享，赢中国道<i class="icon-chevron-right ml10"></i></a>-->
                                 <p class="button"><a class="btn btn-default btn-lg" role="button">立即预约<i class="icon-chevron-right ml10"></i></a></p>
-                                  <p class="button" style="margin-bottom: 50px; margin-left: 60px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">产品详情</a></p>
+                                  <p class="button" style="margin-bottom: 50px; margin-left: 10px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">了解国馆可乐<i class="icon-chevron-right ml10"></i></a></p>
                             </div>
 
                             <!-- Baidu Button END -->
