产品详情页

--- a/productDetail.html
+++ b/productDetail.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>产品详情</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/layout.css">
 
     <script type="text/javascript" src="js/jquery-1.8.0.js"></script>
     <script type="text/javascript" src="js/jquery.easing.js"></script>
@@ -66,30 +67,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand guoguannav-icon" href="#" style="width: 98px; height: 40px; margin-top: 5px;"></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li class="active"><a href="#">中国道</a></li>
+                <li><a href="#about">中国道</a></li>
+                <li><a href="#contact">中国道</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top</a></li>
+                <li><a href="../navbar/" class="buy-now-button">立即购买</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -100,9 +87,7 @@
     <ul>
         <li id="home" style="background:none;"><a href="#home" class="home">0</a></li>
         <li><a href="#about" class="about">1</a></li>
-        <li><a href="#culture" class="culture">2</a></li>
-        <li><a href="#joinus" class="joinus">3</a></li>
-        <li><a href="#address" class="address">4</a></li>
+
     </ul>
 </nav>
 
@@ -116,31 +101,6 @@
         <div class="content"></div>
     </div>
 
-    <div class="wrap culture">
-        <div class="content"></div>
-    </div>
-
-    <div class="wrap joinus">
-        <div class="content">
-            <p>
-                <img src="images/pic_joinus.png" alt="" usemap="#Map2" >
-                <map name="Map2" id="Map2">
-                    <area shape="rect" coords="425,557,611,612" href="" />
-                </map>
-            </p>
-        </div>
-    </div>
-
-    <div class="wrap address">
-        <div class="content">
-            <p>
-                <img src="images/MAP.png" alt="" usemap="#Map">
-                <map name="Map" id="Map">
-                    <area shape="circle" coords="244,476,70" href="" />
-                </map>
-            </p>
-        </div>
-    </div>
 </div>
 
 
