--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -15,8 +15,10 @@
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">购物车</h3>
-    <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+    <h3 class=" head-title-appearance">个人中心</h3>
+    <a href="m-shoppingCart.html">
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+    </a>
 </nav>
 
 <div class="content">
