--- a/site/m-order-search.html
+++ b/site/m-order-search.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>国馆商城-购物车</title>
+    <title>订单查询</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
-    <meta name="description" content="中国道是国馆首款收藏级文化白酒，大师之作，是送礼的绝佳选择，是客厅的装B利器，是不愿轻易风险的收藏级好酒。中国道，这种酒，你只会用来招待最知心的朋友。">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
@@ -15,12 +13,11 @@
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">购物车</h3>
+    <h3 class=" head-title-appearance">订单查询</h3>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
 </nav>
-
 <div class="content">
     <div class="m-shopping-cart">
         <ul class="m-choose-product">
@@ -30,11 +27,14 @@
                         <img src="image/mytiem.png">
                     </div>
                     <div class="m-choose-detail">
-                        <div class="m-choose-title">
-                            中国道中国道
+                        <div class="m-choose-title mt1">
+                            订单日期：2014/4/22
                         </div>
                         <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
+                            订单编号：50599950005999588
+                        </div>
+                        <div class="m-choose-brief-detail">
+                            总价：￥2666 <span class="m-order-unpay">订单状态：未付款</span>
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
@@ -47,11 +47,14 @@
                         <img src="image/mytiem.png">
                     </div>
                     <div class="m-choose-detail">
-                        <div class="m-choose-title">
-                            中国道中国道
+                        <div class="m-choose-title mt1">
+                            订单日期：2014/4/22
                         </div>
                         <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
+                            订单编号：50599950005999588
+                        </div>
+                        <div class="m-choose-brief-detail">
+                            总价：￥2666 <span class="m-order-payed">订单状态：已付款</span>
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
@@ -62,14 +65,14 @@
     </div>
 </div>
 
-<div class="m-shopping-checkout">
-    <div class="m-check-total-money">
-        金额合计<span>￥5332</span>
-    </div>
-    <div class="m-button m-button-check">
-        <div class="m-button-content">
-            结算
-        </div>
+<div class="footer">
+    <div>
+        <span>
+            登录
+        </span>
+        <span>
+            注册
+        </span>
     </div>
 </div>
 </body>
