--- a/site/m-shoppingCart-modify.html
+++ b/site/m-shoppingCart-modify.html
@@ -13,7 +13,7 @@
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">个人中心</h3>
+    <h3 class=" head-title-appearance">修改购物车</h3>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
