订单详情页移动版

--- a/site/m-order-search.html
+++ b/site/m-order-search.html
@@ -22,7 +22,7 @@
     <div class="m-shopping-cart">
         <ul class="m-choose-product">
             <li>
-                <a href="m-shoppingCart-modify.html">
+                <a href="m-order-detail.html">
                     <div class="m-choose-image">
                         <img src="image/mytiem.png">
                     </div>
@@ -34,7 +34,7 @@
                             订单编号：50599950005999588
                         </div>
                         <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-unpay">订单状态：未付款</span>
+                            总价：￥2666 <span class="m-order-unpay ml1">订单状态：等待付款</span>
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="m-shoppingCart-modify.html">
+                <a href="m-order-detail.html">
                     <div class="m-choose-image">
                         <img src="image/mytiem.png">
                     </div>
@@ -54,7 +54,7 @@
                             订单编号：50599950005999588
                         </div>
                         <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-payed">订单状态：已付款</span>
+                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
