结算等页面

--- a/site/m-address-admin.html
+++ b/site/m-address-admin.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>国馆商城-购物车</title>
+    <title>收货地址</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
-    <meta name="description" content="中国道是国馆首款收藏级文化白酒，大师之作，是送礼的绝佳选择，是客厅的装B利器，是不愿轻易风险的收藏级好酒。中国道，这种酒，你只会用来招待最知心的朋友。">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
@@ -15,26 +13,23 @@
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">购物车</h3>
+    <h3 class=" head-title-appearance">收货地址</h3>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
 </nav>
 
 <div class="content">
-    <div class="m-shopping-cart">
+    <div class="m-shopping-cart m-address-cart">
         <ul class="m-choose-product">
             <li>
-                <a href="m-shoppingCart-modify.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
+                <a href="m-address-modify.html">
+                    <div class="m-choose-detail m-address-display">
                         <div class="m-choose-title">
-                            中国道中国道
+                            广东省广州市天河区
                         </div>
                         <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
+                            华明路13华普广场东塔702（518129）谢奇 18503014025
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
@@ -42,16 +37,13 @@
                 </a>
             </li>
             <li>
-                <a href="m-shoppingCart-modify.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
+                <a href="m-address-modify.html">
+                    <div class="m-choose-detail m-address-display">
                         <div class="m-choose-title">
-                            中国道中国道
+                            广东省广州市天河区
                         </div>
                         <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
+                            华明路13华普广场东塔702（518129）谢奇 18503014025
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
@@ -60,19 +52,33 @@
             </li>
         </ul>
     </div>
+
+    <div class="m-shopping-cart">
+        <ul class="m-choose-product m-address-add-button">
+            <li>
+                <a href="m-address-add.html">
+                    <div class="m-choose-detail m-address-display">
+                        <div>
+                            添加新地址
+                        </div>
+                    </div>
+                    <div class="icon-angle-right icon-angle-right-appearance icon-angle-right-address"></div>
+                    <div class="clear"></div>
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 
-<div class="m-shopping-checkout">
-    <div class="m-check-total-money">
-        金额合计<span>￥5332</span>
+<div class="footer">
+    <div>
+        <span>
+            登录
+        </span>
+        <span>
+            注册
+        </span>
     </div>
-    <a href="m-checkout-choose.html">
-        <div class="m-button m-button-check">
-            <div class="m-button-content">
-                结算
-            </div>
-        </div>
-    </a>
 </div>
 </body>
 </html>
