--- a/site/m-center.html
+++ b/site/m-center.html
@@ -40,14 +40,14 @@
                     <div class="icon-angle-right"></div>
                 </li>
             </a>
-            <a href="m-order-search.html">
+            <a href="#">
                 <li>
                     <div class="icon-truck"></div>
                     <div class="inlinebl">物流查询</div>
                     <div class="icon-angle-right"></div>
                 </li>
             </a>
-            <a href="m-order-search.html">
+            <a href="m-address-admin.html">
                 <li>
                     <div class="icon-reorder"></div>
                     <div class="inlinebl">地址管理</div>
