--- a/site/m-order-detail.html
+++ b/site/m-order-detail.html
@@ -39,7 +39,18 @@
         </div>
     </div>
     <div class="m-order-detail-partThree">
-
+        <div class="m-choose-image mt1 ml1-8">
+            <img src="image/mytiem.png">
+        </div>
+        <div class="m-choose-detail mt1">
+            <div class="m-choose-title">
+                中国道中国道
+            </div>
+            <div class="m-choose-brief-detail">
+                售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
+            </div>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
 
@@ -47,11 +58,13 @@
     <div class="m-check-total-money">
         应付总额<span>￥5332</span>
     </div>
-    <div class="m-button m-button-check">
-        <div class="m-button-content">
-            立即付款
+    <a href="m-online-pay.html">
+        <div class="m-button m-button-check">
+            <div class="m-button-content">
+                立即付款
+            </div>
         </div>
-    </div>
+    </a>
 </div>
 </body>
 </html>
