--- a/site/m-order-submit.html
+++ b/site/m-order-submit.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>国馆商城-购物车</title>
+    <title>提交订单</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
-    <meta name="description" content="中国道是国馆首款收藏级文化白酒，大师之作，是送礼的绝佳选择，是客厅的装B利器，是不愿轻易风险的收藏级好酒。中国道，这种酒，你只会用来招待最知心的朋友。">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
@@ -15,15 +13,16 @@
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">购物车</h3>
+    <h3 class=" head-title-appearance">提交订单</h3>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
 </nav>
 
-<div class="content">
+<div class="content m-order-detail-content">
+
     <div class="m-shopping-cart">
-        <ul class="m-choose-product">
+        <ul class="m-choose-product m-choose-product-submit">
             <li>
                 <a href="m-shoppingCart-modify.html">
                     <div class="m-choose-image">
@@ -37,7 +36,6 @@
                             售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
                         </div>
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
                     <div class="clear"></div>
                 </a>
             </li>
@@ -54,22 +52,26 @@
                             售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
                         </div>
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
                     <div class="clear"></div>
                 </a>
             </li>
         </ul>
     </div>
+
+
+    <div>
+
+    </div>
 </div>
 
 <div class="m-shopping-checkout">
     <div class="m-check-total-money">
-        金额合计<span>￥5332</span>
+        应付总额<span>￥5332</span>
     </div>
-    <a href="m-checkout-choose.html">
+    <a href="m-online-pay.html">
         <div class="m-button m-button-check">
             <div class="m-button-content">
-                结算
+                提交订单
             </div>
         </div>
     </a>
