--- a/site/m-shoppingCart-modify.html
+++ b/site/m-shoppingCart-modify.html
@@ -42,9 +42,14 @@
             <option>5</option>
         </select>
     </div>
-    <div class="m-delete-button">
+    <div class="m-delete-button" style="width: 49%">
         <div class="m-button-content">
             删除
+        </div>
+    </div>
+    <div class="m-button" style="width: 49%">
+        <div class="m-button-content">
+            完成
         </div>
     </div>
 </div>
