移动页面开发

--- a/site/m-order-submit.html
+++ b/site/m-order-submit.html
@@ -21,7 +21,7 @@
 
 <div class="content m-order-detail-content">
 
-    <div class="m-shopping-cart">
+    <div class="m-shopping-cart mb0">
         <ul class="m-choose-product m-choose-product-submit">
             <li>
                 <a href="m-shoppingCart-modify.html">
@@ -59,8 +59,21 @@
     </div>
 
 
-    <div>
-
+    <div class="submit-table-display content mt0">
+        <ul>
+            <li>
+                <div>商品价格</div>
+                <div>￥5332</div>
+            </li>
+            <li>
+                <div>运送费</div>
+                <div>￥10</div>
+            </li>
+            <li>
+                <div>应付总额</div>
+                <div>￥5342</div>
+            </li>
+        </ul>
     </div>
 </div>
 
